[gd_scene load_steps=5 format=3 uid="uid://bjbijqx4u6kfk"]

[ext_resource type="Script" path="res://Minigames/codecompare/codecompare.gd" id="1_w7tk2"]

[sub_resource type="Gradient" id="Gradient_38v5g"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8pb6d"]
gradient = SubResource("Gradient_38v5g")

[sub_resource type="SystemFont" id="SystemFont_gola0"]
font_names = PackedStringArray("Courier New")
font_weight = 800

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w7tk2")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_right = 1152.0
offset_bottom = 10.0
size_flags_horizontal = 3
max_value = 256.0
value = 128.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_8pb6d")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 448.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 384.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton1" type="TextureButton" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 448.0
offset_top = 80.0
offset_right = 704.0
offset_bottom = 127.0
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="."]
offset_left = 448.0
offset_top = 328.0
offset_right = 704.0
offset_bottom = 375.0
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AvgTime" type="Label" parent="."]
offset_left = 448.0
offset_top = 380.0
offset_right = 704.0
offset_bottom = 427.0
theme_override_fonts/font = SubResource("SystemFont_gola0")
theme_override_font_sizes/font_size = 40
text = "-
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/TextureButton1" to="." method="_on_texture_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer3/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer4/TextureButton4" to="." method="_on_texture_button_4_pressed"]
